--- a/03.JQuery/WebContent/01/01-01.html
+++ b/03.JQuery/WebContent/01/01-01.html
@@ -4,12 +4,12 @@
 	<script src = "http://code.jquery.com/jquery.js"></script>
 	<script>
 	//01-01은 01-02와 같은 의미의 코드
+	//jQuery는 이 01부터 시작하는것이다.
 		$(document).ready(function ()
 		{
 			
 		});
 	</script>
-<title>Insert title here</title>
 </head>
 <body>
 
