--- a/03.JQuery/WebContent/06/06-10.html
+++ b/03.JQuery/WebContent/06/06-10.html
@@ -42,12 +42,25 @@
 			{
 				if (request.status == 200)
 				{
-					document.body.innerHTML += request.responseText;
-				};
+					// 변수를 선언합니다.
+					var xml = request.responseXML;
+					
+					//데이터를 가공합니다.
+					var names = xml.getElementsByTagName('name');
+					var prices =xml.getElementsByTagName('price');
+					
+					for (var i=0; i < names.length; i++)
+					{
+						var name = names[i].childNodes[0].nodeValue;
+						var price = prices[i].childNodes[0].nodeValue;
+						document.body.innerHTML += '<h1>' + name + '</h1>';
+						document.body.innerHTML += '<h2>' + price + '</h2>';
+					}
+				}
 			};
 		};
 		
-		request.open('GET', '/data.html', true);
+		request.open('GET', '/data.xml', true);
 		request.send();
 	</script>
 </body>
