--- a/JspCalc/WebContent/form2.html
+++ b/JspCalc/WebContent/form2.html
@@ -2,23 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>Insert title here</title>
 </head>
 <body>
-<!-- 파라미터를 받아서 출력하는게 기본. 형태를 잘 봐두기. -->
-
-	<form action = "calc.jsp" method = "get">
+	<form action = "calc2" method = "get">
 		첫 번째 수 : <input type = "text" name = "num1" size = "10"><br/>
 		두 번째 수 : <input type = "text" name = "num2" size = "10"><br/>
 			
-		계산 종류 : <input type = "radio" name = "operation" value = "add">더하기
+		<input type = "radio" name = "operation" value = "add">더하기
 		<input type = "radio" name = "operation" value = "minus" checked="checked">빼기
 		<input type = "radio" name = "operation" value = "multiply">곱하기
 		<input type = "radio" name = "operation" value = "divide">나누기<br/>
-
-		<input type="submit" value="계산결과보기"><input type="reset" value="초기화">
+	
+		</select><br/>
+		<input type="submit" value="전송"><input type="reset" value="초기화">
 		
 	</form>
-
 </body>
 </html>
